fixed logo size on mobile

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ a {
 
 /*Size of logo */
 #logo {
-	width: 20%;
-	height: 20%;
+	width: 25%;
+	height: 25%;
 }
 
 /*Literally just a line*/
@@ -137,10 +137,6 @@ table img {
 		width: 95%;
 		height: 30%;
 		background-color: white;
-	}
-		#logo img {
-		width: 45%;
-		height: 45%;
 	}
 }
 
